.deploy/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:$JELLYFIN
          ports:
            - containerPort: 1900
              protocol: UDP
            - containerPort: 7359
              protocol: UDP
            - containerPort: 8096
              protocol: TCP
            - containerPort: 8920
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /data/movies
            - name: tv
              mountPath: /data/tvshows
            - name: books
              mountPath: /data/books
            - name: comics
              mountPath: /data/comics
            - name: family-media
              mountPath: /data/family-media
          startupProbe:
            httpGet:
              path: /health
              port: 8096
            periodSeconds: 5
            failureThreshold: 60  # 5 minutes worst-case startup
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
      volumes:
        - name: config
          nfs:
            server: 10.60.1.15
            path: /data/services/jellyfin
        - name: movies
          nfs:
            server: 10.60.1.15
            path: /data/mounts/movies
        - name: tv
          nfs:
            server: 10.60.1.15
            path: /data/mounts/tv
        - name: books
          nfs:
            server: 10.60.1.15
            path: /data/mounts/books
        - name: comics
          nfs:
            server: 10.60.1.15
            path: /data/mounts/comics
        - name: family-media
          nfs:
            server: 10.60.1.15
            path: /data/mounts/family-media
      nodeSelector:
        dedicated: nas
